# Staff_Report

./: .gitignore  Generator.py  Makefile  README.md  app.py  combined_output_new.xlsx  data_summary.docx  main.py  main_1.py  pyproject.toml  requirements.txt
CSE_report/Staff_Report/: main.py
CSE_report/Staff_Report/files/: B.E_(CSE)_III YEAR- CSPC602-TEST1-MARKS.xls  B.E_CSE_DS_II YEAR- PD-22DSES402-Midterm 1.xlsx
DS_3rd_Year/: DSCP601_output.xlsx  DSCP602_output.xlsx  DSCP607_output.xlsx  DSCP608_output.xlsx  DSPC604_output.xlsx  DSPE603_output.xlsx  DSPE605_output.xlsx  EEOE606_output.xlsx  consolidated_output.xlsx
files/: B.E_CSE_DS_II YEAR- PD-22DSES402-Midterm 1.xlsx  DSCP601.xlsx  DSCP602.xlsx  DSCP607.xlsx  DSCP608.xlsx  DSPC604.xlsx  DSPE603.xlsx  DSPE605.xlsx  EEOE606.xlsx
output/: B.E_(CSE)_III YEAR- CSPC602-TEST1-MARKS.xls_output.xlsx  B.E_CSE_DS_II YEAR- PD-22DSES402-Midterm 1_output.xlsx  DSCP601_output.xlsx  DSCP602_output.xlsx  DSCP607_output.xlsx  DSCP608_output.xlsx  DSPC604_output.xlsx  DSPE603_output.xlsx  DSPE605_output.xlsx  EEOE606_output.xlsx
processed_files/: DSCP601_output.xlsx  DSCP602_output.xlsx  DSCP607_output.xlsx  DSCP608_output.xlsx  DSPC604_output.xlsx  DSPE603_output.xlsx  DSPE605_output.xlsx  EEOE606_output.xlsx  combined_output_new.xlsx
src/: model.py
src/staffreport/: __init__.py  __main__.py  logic.py
src/staffreport.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ui/: app.py  list_file.py  main_window.py  sample_ui.py  signals.py  utils.py  variables_editor.py
(+7 files in other folders)
