[project]
name="staffreport"
version="0.1.0"
authors=[
  {name="Aravind S", email="aravind9180@gmail.com"},
]
description=""
readme="README.md"
requires-python=">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "PyQt6==6.7.1"
  "pandas==2.1.4",
  "XlsxWriter==3.2.0",
  "openpyxl==3.1.2"
]

[project.gui-scripts]
staffreport = "staffreport:gui_main"
